--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p>
             <b
               ><img src="https://feeldreams.github.io/pusn2.gif" /><br />
-              <span>Halo Sarah</span>
+              <span>Halo Nabila</span>
             </b>
           </p>
 
